<?xml version="1.0"?>
<package format="2">
  <name>lfd_interface</name>
  <version>0.0.0</version>
  <description>The LfD interface package</description>
  <maintainer email="saraybakker@gmail.com">dingo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>user_interface_msg</build_depend>

  <export></export>
</package>
